--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
-"Sharif Mohammad Shahnewaz Ferdous" 
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Sharif Mohammad Shahnewaz Ferdous</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Theme CSS -->
+    <link href="css/sharif.css" rel="stylesheet">
+
+
+  </head>
+
+  <body>
+  <!-- Navigation -->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom" style="border-top: thick; border-color: black;">
+	  <div class="container">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header page-scroll">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+					</button>
+					<a class="navbar-brand" href="index.html#page-top">Sharif</a>
+				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="hidden">
+							<a href="#page-top"></a>
+						</li>					
+						<li class="page-scroll">
+							<a href="#education">Education</a>
+						</li>
+						<li class="page-scroll">
+							<a href="#research">Research</a>
+						</li>
+						<li class="page-scroll">
+							<a href="#teaching">Teaching</a>
+						</li>
+						<li class="page-scroll">
+							<a href="#publications">Publications</a>
+						</li>
+						<li class="page-scroll">
+							<a href="#others">Others</a>
+						</li>
+					</ul>
+				</div>
+				<!-- /.navbar-collapse -->
+			</div>
+			<!-- /.container-fluid -->
+
+  </nav>
+	<header>
+        <div class="container" id="page-top">
+            <div class="row">
+				<div class="col-lg-2">
+                    <img class="img-responsive" src="images/sharif.jpg" alt="Sharif Shahnewaz">
+				</div>
+                <div class="col-lg-6" style="text-align: justify">				
+                    <p>I am a Ph.D. student in the Department of Computer Science at <a href="http://www.utsa.edu/">University of Texas at San Antonio</a>. Currently I am working as a Research Assistant at <a href="http://savelab.x10host.com/">SAVE Lab</a> under the supervision of <a href = "http://www.cs.utsa.edu/~jpq/Site/About.html">Dr. John Quarles</a>.</p>
+					
+					<p>My research interests include <em>Virtual Reality, Mixed Reality, Augmented Reality, Serious Games, 3D User Interfaces, Interactive Computer Graphics, Human-Computer Interaction</em>.</p>
+                </div>
+				<div class="col-lg-4">
+				<table>
+				<tr>
+					<td><img src="images/email.png" alt="Email:" style="max-width:50px; margin-right:10px; margin-top:5px;"></td>
+					<td><p style=" font-size: 20px; text-align:left"><a href="mailto:sharif.shahnewaz@gmail.com" target="_blank">sharif.shahnewaz@gmail.com</a></p></td>
+				 </tr>
+				 <tr>
+					<td><img src="images/resume.png" alt="Curriculum Vitae:" style="max-width:50px; margin-right:10px; margin-top:5px;"></td>
+					<td><p style=" font-size: 20px; text-align:left"><a href="files/CV.pdf" target="_blank">Curriculum Vitae</a></p></td>
+				 </tr>
+				</table>		
+                
+            </div>
+        </div>
+    </header>
+
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
+	    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="js/sharif.js"></script>
+
+  </body>
+</html>
