--- a/index.html
+++ b/index.html
@@ -88,6 +88,23 @@
             </div>
         </div>
     </header>
+	<div class="container" id="education">
+    	<div class="row">
+			<h3>Education</h3>
+			<h4> Ph.D. in Computer Science (Fall 2013 - Summer 2018 (Expected))</h4>
+			<ul style="list-style-type:none">
+				<li>
+					<p>University of Texas at San Antonio</p>
+				</li>
+			</ul>
+			<h4> B.Sc. in Computer Science and Engineering (2006 - 2011)</h4>
+			<ul style="list-style-type:none">
+				<li>
+					<p>Bangladesh University of Engineering and Technology</p>
+				</li>
+			</ul>
+    	</div>
+	</div>
 
 
 
